# pxls-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
ldap/: oid_tree.md  pxls.schema
migration/: Cargo.toml
migration/src/: lib.rs  m0_create_boards_colors_placements.rs  m10_bans.rs  m11_deferred_palette.rs  m12_remove_ldap.rs  m4_system_colors.rs  m5_notices.rs  m6_board_notices.rs  m7_indices.rs  m8_small_uid.rs  m9_reports.rs
migration/src/m12_remove_ldap/: dummy.rs  entities.rs  ldap.rs
migration/src/m12_remove_ldap/ldap/: config.rs
migrations/2021-09-27-153809_create_boards_colors_placements/: down.sql  up.sql
migrations/2021-10-02-144956_advanced_shapes/: down.sql  up.sql
migrations/2021-11-25-103201_max_stacked_board_property/: down.sql  up.sql
src/: board.rs  config.rs  database.rs  filters.rs  main.rs  openid.rs  permissions.rs  routes.rs  socket.rs
src/access/: mod.rs  permissions.rs  user.rs
src/authentication/: bearer.rs  mod.rs  openid.rs
src/board/: activity.rs  board.rs  color.rs  connections.rs  cooldown.rs  info.rs  placement.rs  sector.rs  shape.rs  socket.rs  user.rs
src/board/sector/: access.rs  buffer.rs  cache.rs
src/board/socket/: connections.rs  packet.rs  subscription.rs
src/config/: mod.rs
src/database/: ban.rs  board.rs  board_notice.rs  boards.rs  color.rs  entities.rs  faction.rs  faction_member.rs  filter.rs  mod.rs  model.rs  notice.rs  placement.rs  queries.rs  query.rs  report.rs  role.rs  role_member.rs  schema.rs  sector.rs  specifier.rs  user.rs  users.rs
src/database/boards/: migrations.rs
src/database/boards/entities/: ban.rs  board.rs  board_notice.rs  board_sector.rs  color.rs  faction_member.rs  mod.rs  notice.rs  placement.rs  prelude.rs  report.rs  report_artifact.rs  user.rs  user_id.rs
src/database/entities/: artifact.rs  ban.rs  board_notice.rs  board_sector.rs  faction.rs  mod.rs  placement.rs  prelude.rs  role.rs  role_member.rs  rustfmt.toml  user_id.rs
src/database/migrations/: m0_create_boards_colors_placements.rs  m1_advanced_shapes.rs  m2_max_stacked_board_property.rs  m3_json_shape.rs  mod.rs
src/database/sql/: create_board_table.sql  create_color_table.sql  create_palette_table.sql  create_placement_table.sql  current_placements.sql  insert_placement.sql  lookup.sql  placement_page_backward.sql  placement_page_forward.sql  reassign_palette.sql  setup.sql  user_last_pixel.sql
src/database/users/: connection.rs  entities.rs
src/filter/: header.rs  resource.rs
src/filter/body/: patch.rs
src/filter/header/: accept_encoding.rs  authorization.rs  content_range.rs  range.rs
src/filter/resource/: board.rs  database.rs  filter.rs  users.rs
src/filter/response/: paginated_list.rs  reference.rs
src/filters/: body.rs  header.rs  mod.rs  resource.rs  response.rs
src/filters/body/: mod.rs  patch.rs
src/filters/header/: accept_encoding.rs  authorization.rs  content_range.rs  mod.rs  range.rs
src/filters/resource/: board.rs  database.rs  mod.rs  users.rs
src/objects/: board.rs  board_sector.rs  color.rs  connections.rs  cooldown.rs  mod.rs  packet.rs  paginated_list.rs  patch.rs  placement.rs  ranges.rs  reference.rs  sector_cache.rs  shape.rs  socket.rs  user.rs  user_count.rs
src/objects/packet/: client.rs  server.rs
src/objects/sector/: access.rs  cache.rs  mod.rs  sector.rs
src/routes/: authentication.rs  board_undo.rs  core.rs  factions.rs  mod.rs  reports.rs  roles.rs  site_notices.rs
src/routes/auth/: auth.rs  mod.rs
src/routes/authentication/: authentication.rs  mod.rs
src/routes/board_data_initial/boards/: data.rs
src/routes/board_data_mask/boards/: data.rs
src/routes/board_data_timestamps/boards/: data.rs
src/routes/board_lifecycle/: boards.rs
src/routes/board_moderation/boards/: pixels.rs
src/routes/board_notices/boards/: notices.rs
src/routes/board_undo/: boards.rs
src/routes/board_undo/boards/: pixels.rs
src/routes/core/: access.rs  boards.rs  events.rs  info.rs  mod.rs  pagination.rs
src/routes/core/boards/: data.rs  mod.rs  pixels.rs  users.rs
src/routes/factions/: factions.rs
src/routes/factions/factions/: members.rs
src/routes/factions/users/: factions.rs
src/routes/placement_statistics/: users.rs
src/routes/reports/: reports.rs
src/routes/roles/: roles.rs  users.rs
src/routes/roles/users/: roles.rs
src/routes/site_notices/: notices.rs
src/routes/user_bans/: users.rs
src/routes/user_count/: boards.rs
src/routes/users/: mod.rs  users.rs
src/routes/users/users/: mod.rs
src/socket/: event.rs  mod.rs  packet.rs  server.rs  socket.rs
src/socket/packet/: client.rs  server.rs
src/users/: mod.rs
