[package]
name = "pxls-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0"
serde_qs = { version = "0.12.0", features = ["warp"] }
serde_with = "3.6.1"
reqwest = { version = "0.11.24", features = ["json"] }
lazy_static = "1.4.0"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
warp = { version = "0.3.6", features = ["compression"] }
ouroboros = "0.18.3"
http-serde = "1.1.3"
envy = "0.4"
url = { version = "2.5", features = ["serde"] }
enum-map = "2.7.3"
enumset = { version = "1.1.3", features = ["serde"] }
jsonwebtoken = "8.3.0"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
rand = "0.8.5"
async-trait = "0.1.77"
tokio-util = "0.7.10"
uuid = { version = "1.7.0", features = ["v4"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.57"
itertools = "0.12.1"
ldap3 = { version = "0.11.3", features = ["tls"] }
deadpool = { version = "0.10.0", features = ["managed"] }
chrono = "0.4.34"
base64 = "0.21.7"
migration = { path = "migration" }
num_enum = "0.7.2"
