[package]
name = "pxls-rs"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0"
serde_qs = { version = "0.13.0", features = ["warp"] }
serde_with = "3.6.1"
reqwest = { version = "0.11.24", features = ["json"] }
lazy_static = "1.4.0"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
warp = { version = "0.3.6", features = ["compression"] }
ouroboros = "0.18.3"
http-serde = "1.1.3"
envy = "0.4"
url = { version = "2.5", features = ["serde"] }
enum-map = "2.7.3"
enumset = { version = "1.1.3", features = ["serde"] }
jsonwebtoken = "8.3.0"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
async-trait = "0.1.77"
tokio-util = "0.7.10"
uuid = { version = "1.7.0", features = ["v4"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.57"
itertools = "0.13.0"
deadpool = { version = "0.10.0", features = ["managed"] }
chrono = "0.4.34"
base64 = "0.22.0"
migration = { path = "migration" }
num_enum = "0.7.2"
tinyrand = "0.5.0"
flate2 = "1.1.2"
sea-query = "0.32.7"

[features]
default = []
migrate-ldap = ["migration/migrate-ldap"]
